style.css
body {
	display: flex;
	align-items: center;
	justify-content: center;
	background-color: lightgray;
	font-family: sans-serif;
}

.container {
	box-sizing: border-box;
	display: flex;
	flex-direction: column;
	align-items: center;
	width: 22rem;
	height: auto;
	text-align: center;
	padding: 3rem;
	gap: 1.56rem;
	background-color: white;
}
.rate svg {
	height: 1.37rem;
}

.review p {
	font-size: 0.875rem;
	margin-top: 1.25rem;
	margin-bottom: 1.25rem;
}

.user {
	display: flex;
	width: 16rem;
	text-align: start;
	justify-content: center;
	align-items: center;
	gap: 0.96rem;
}

.user .img {
	background-color: lightgray;
	height: 3.12rem;
	width: 3.12rem;
	border-radius: 50%;
}

.user-data p {
	font-size: 0.875rem;
	font-weight: bold;
	margin: 0;
}
.name {
	color: cornflowerblue;
}

.divider {
	width: 12.625rem;
	height: 0.125rem;
	background-color: lightgray;
	margin: 1.2rem;
}

.header {
	color: cornflowerblue;
	font-weight: bold;
	font-size: 0.87rem;
	margin-top: 0;
	margin-bottom: 0;
}

h1 {
	text-align: center;
	font-size: 2.5rem;
	line-height: 3.125rem;
	font-weight: bolder;
}

.form {
	display: grid;
	gap: 1.56rem;
}

.container form {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	margin: 0;
}

.container form input {
	box-sizing: border-box;
	height: 3.62rem;
	width: 16.37rem;
	margin-bottom: 0.7em;
	padding-left: 1.25rem;
	border: 1px solid #797979;
	color: gray;
	background-color: lightgrey;
	border-radius: 3px;
	font-size: 0.87rem;
}

.container form input::placeholder {
	font-weight: bolder;
}

.container form button {
	height: 3.62rem;
	width: 16.37rem;
	border: none;
	background-color: cornflowerblue;
	font-size: 0.87rem;
	color: white;
	border-radius: 3px;
}

.footer {
	color: grey;
	font-size: 0.87rem;
	margin: 0;
}

@media screen and (min-width: 1200px) {
	.container {
		flex-direction: row;
		justify-content: space-between;
		width: 70.5rem;
	}

	.review {
		display: flex;
		width: 27.375rem;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		padding: 1.87rem;
	}

	.review .reviewDesc {
		width: 16.0625rem;
	}

	.user {
		margin-left: 0;
	}

	.divider {
		width: 0.125rem;
		height: 18.625rem;
	}

	.form {
		width: 30.875rem;
	}

	.container form {
		flex-direction: row;
	}
	.container form input {
		width: 16rem;
		border-radius: 0.3125rem 0 0 0.3125rem;
		margin: 0;
		align-items: center;
	}

	.container form button {
		width: 7.3125rem;
		border-radius: 0rem 0.3125rem 0.3125rem 0rem;
	}
}

